--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,34 +1,31 @@
 # Change 'comments' to true for Disqus comments
 disqus:
   comments: false
-  disqus_shortname: 'millennial-3'
+  disqus_shortname: 'editathon'
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-112060364-2'
+google-ID: ''
 
 menu:
-- {name: 'Interesting Facts',  url: 'facts'}
-- {name: 'Learning Resources', url: 'resources'}
-- {name: 'Sample Posts',       url: 'sample-posts'}
-- {name: 'Documentation',      url: 'documentation'}
-- {name: 'About',              url: 'about'}
-- {name: 'Contact',            url: 'contact'}
+- {name: 'about',  url: 'about'}
+- {name: 'get ready',       url: 'pre-event'}
+- {name: 'event mechanism', url: 'during-event'}
+- {name: 'Learning resources', url: 'resources'}
+- {name: 'documentation',      url: 'documentation'}
+- {name: 'Contact & acknowledgements', url: 'contact'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'twitter', link:    'https://twitter.com/paululele'}
-- {icon: 'facebook', link:   'https://www.facebook.com/paululele'}
-- {icon: 'instagram', link:  'https://instagram.com/paululele'}
-- {icon: 'envelope', link:   'mailto:hello@paulle.ca'}
-- {icon: 'rss-square', link: 'feed.xml'}
-# - {icon: 'rss-square', link: 'rss-feed.xml'}
+- {icon: 'twitter', link:    'https://twitter.com/'}
+- {icon: 'instagram', link:  'https://instagram.com/'}
+- {icon: 'envelope', link:   'mailto:editathon.nutrition@gmail.com'}
 
 # Customize site text
 pagination:
   next_page: 'Newer'
   previous_page: 'Older'
 
-sharing_button_prompt: 'Feel free to share!'
+# sharing_button_prompt: 'Feel free to share!'
 
 related_posts: 'You may also enjoy...'
 
