--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,12 +7,12 @@ disqus:
 google-ID: ''
 
 menu:
-- {name: 'about',  url: 'about'}
-- {name: 'get ready',       url: 'pre-event'}
-- {name: 'event mechanism', url: 'during-event'}
+- {name: 'About',  url: 'about'}
+- {name: 'Get ready',       url: 'pre-event'}
+- {name: 'Event mechanism', url: 'during-event'}
 - {name: 'Learning resources', url: 'resources'}
-- {name: 'documentation',      url: 'documentation'}
-- {name: 'Contact & acknowledgements', url: 'contact'}
+- {name: 'Docs',      url: 'documentation'}
+- {name: 'Contact & Acks', url: 'contact'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
