--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ google-ID: ''
 
 menu:
 - {name: 'About',  url: 'about'}
-- {name: 'Get ready',       url: 'pre-event'}
+- {name: 'Get ready',       url: 'get-ready'}
 - {name: 'Event mechanism', url: 'during-event'}
 - {name: 'Learning resources', url: 'resources'}
 - {name: 'Docs',      url: 'documentation'}
