--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           "Edithaton"
+title:		           "Editathon"
 description:	       "Editathon 2021 : Health for All"
 author:              "ArturoS"
 
